# starrynight

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  README.md  flake.nix  index.html  justfile  mkdocs.yml  pyproject.toml  update.22.12.24.patch
conductor/: README.md  pyproject.toml
conductor/src/conductor/: constants.py  cron.py  database.py  main.py  utils.py
conductor/src/conductor/cli/: main.py
conductor/src/conductor/deploy/: __init__.py
conductor/src/conductor/deploy/local/: __init__.py  app.py
conductor/src/conductor/handlers/: __init__.py  cron.py  execute.py  job.py  project.py  run.py  status.py  step.py
conductor/src/conductor/models/: __init__.py  base.py  job.py  project.py  run.py  step.py
conductor/src/conductor/validators/: job.py  project.py  run.py  step.py
conductor/tests/: __init__.py  conftest.py
conductor/tests/unit/: __init__.py
conductor/tests/unit/models/: __init__.py  test_job_model.py  test_project_model.py  test_run_model.py  test_step_model.py
pipecraft/: .gitignore  README.md  env.yml  flake.nix  pyproject.toml
pipecraft/pipecraft/: README.md  pyproject.toml
pipecraft/pipecraft/src/pipecraft/: backend.py  node.py  pipeline.py  utils.py
pipecraft/pipecraft/src/pipecraft/backend/: aws_batch.py  base.py  snakemake.py
pipecraft/pipecraft/tests/: test_backend.py  test_pipeline.py
pipecraft/src/pipecraft/: __init__.py  pipeline.py
pipecraft/src/pipecraft/backend/: __init__.py  base.py  snakemake.py
pipecraft/src/pipecraft/backend/templates/: __init__.py  fluent.yaml.mako  snakemake.mako
starrynight/: pyproject.toml
starrynight/notebooks/: create_index.py  exec_pcp_generic_pipe.py
starrynight/notebooks/__marimo__/session/: exec_pipeline_001.py.json
starrynight/notebooks/ipynb/: exec_pcp_generic_full.ipynb  exec_pcp_generic_pipe.ipynb  exec_pcp_generic_pipe.py  explore_widgets.ipynb
starrynight/notebooks/misc/: create_index.py  exec_pcp_generic_full.ipynb  exec_pcp_generic_full.py  exec_pcp_generic_pipe.ipynb
starrynight/notebooks/pypct/: exec_pcp_generic_full.py  exec_pcp_generic_pipe.py  explore_widgets.py
starrynight/src/starrynight/: __init__.py  execute.py  experiment.py  index.py  inventory.py  metadata.py  pipe.py  registry.py  sampler.py  schema.py
starrynight/src/starrynight/algorithms/: __init__.py  align.py  analysis.py  cp.py  cp_plugin_callbarcodes.py  cp_plugin_compensate_colors.py  illum_apply.py  illum_apply_sbs.py  illum_calc.py  index.py  inventory.py  preprocess.py  presegcheck.py  segcheck.py  stitchcrop.py  stitchcrop_legacy.py
starrynight/src/starrynight/cli/: align.py  analysis.py  cp.py  exp.py  illum.py  index.py  inv.py  main.py  preprocess.py  presegcheck.py  segcheck.py  stitchcrop.py
starrynight/src/starrynight/configs/: channel_mapping.json
starrynight/src/starrynight/experiments/: __init__.py  common.py  pcp_generic.py  registry.py
starrynight/src/starrynight/modules/: __init__.py  common.py  gen_index.py  gen_inv.py  illum.py  load_data.py  registry.py  schema.py  validate_schema.yaml
starrynight/src/starrynight/modules/analysis/: __init__.py  analysis_cp.py  analysis_cppipe.py  analysis_load_data.py  constants.py
starrynight/src/starrynight/modules/cp_illum_apply/: __init__.py  apply_cp.py  apply_cppipe.py  apply_load_data.py  constants.py
starrynight/src/starrynight/modules/cp_illum_calc/: __init__.py  calc_cp.py  calc_cppipe.py  calc_load_data.py  constants.py
starrynight/src/starrynight/modules/cp_pre_segcheck/: __init__.py  (+4 more)
starrynight/src/starrynight/parsers/: __init__.py  common.py  path_parser_vincent.lark  transformer_vincent.py
starrynight/src/starrynight/pipelines/: __init__.py  common.py  index.py  pcp_generic.py  pcp_stitchcrop.py  registry.py
starrynight/src/starrynight/templates/: __init__.py  check_align.py.mako  marimo_template.py.mako  stitchcrop_legacy.py.mako
starrynight/src/starrynight/utils/: cellprofiler.py  dfutils.py  globbing.py  misc.py  py_to_pa.py  pyimagej.py
starrynight/tests/: .gitignore  CLAUDE.md  IMPLEMENTATION_NOTES.md  README.md  conftest.py  test_fixtures.py
starrynight/tests/_archive/: archived_test_gen_index.py  archived_test_illum.py
starrynight/tests/algorithms/: __init__.py  test_index_algorithm.py
starrynight/tests/cli/: __init__.py
starrynight/tests/fixtures/: README.md  constants.py  fixture_setup.py  test.cppipe
starrynight/tests/fixtures/basic_setup/: README.md  experiment.json  generate_fixtures.py  index.parquet
starrynight/tests/fixtures/fixture_utils/: README.md  create_fixture_archive.py  create_fixture_archive.sh  create_starrynight_download_list.py  filter_loaddata_csv.py  fixture_utils.sh  loaddata_filter.py  loaddata_postprocess.py  loaddata_utils.py  postprocess_loaddata_csv.py  requirements.md  validate_loaddata_paths.py
starrynight/tests/fixtures/integration/: README.md  __init__.py  constants.py  fixture_setup.py
starrynight/tests/fixtures/pcpip-utils/: README.md  __init__.py  create_starrynight_download_list.py  filter_loaddata_csv.py  validate_loaddata_paths.py
starrynight/tests/fixtures/pregenerated_files/: README.md  regenerate.py
starrynight/tests/fixtures/stitch_images/: 4.tif  5.tif  6.tif  8.tif  Fused-with compute overlap.tif  README.md  tile_config.registered.txt  tile_config.txt
starrynight/tests/fixtures/utils/: create_starrynight_download_list.py  fixture_utils.sh
starrynight/tests/integration/: __init__.py  constants.py  loaddata_validation.py  test_getting_started_workflow.py  test_loaddata_validator.py
starrynight/tests/modules/: __init__.py  test_gen_index.py  test_illum.py  test_parser_vincent.py  test_stitching.py
starrynight/tests/modules/stitch_images/: 1.tif  10.tif  2.tif  3.tif  7.tif  9.tif  Fused-without compute.tif  fused.tiff
starrynight/tests/parsers/: __init__.py  test_parser_vincent.py
starrynight/tests/pipelines/: __init__.py
starrynight/tests/utils/: __init__.py  ij.py  stitch_crop.py  stitch_crop_original.py  test_experiment_init.py  test_getting_started_workflow.py  test_stitching.py
(+735 files in other folders)
