[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["starrynight", "pipecraft", "conductor"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "build", "twine"]
docs = ["mkdocs>=1.4.0", "mkdocs-material>=9.0.0", "pymdown-extensions>=9.0",
        "mkdocstrings>=0.19.0", "mkdocstrings-python>=0.8.0"]

[tool.uv.sources]
starrynight = { workspace = true }
pipecraft = { workspace = true }
conductor = { workspace = true }

[tool.uv.workspace]
members = ["starrynight", "pipecraft", "conductor"]
exclude = ["canvas", "docs", "nix", "scratch"]

[tool.hatch.build.targets.wheel]
packages = ["workspace"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
