[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "starrynight",
    "pipecraft",
    "conductor",
    "pooch>=1.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff==0.9.10",
  "duckdb>=1.2.1",
  "build",
  "twine",
  "jupytext",
  "ipython",
  "jupyterlab",
  "jupyterlab-quarto",
  "jupyter-collaboration",
  "jldracula",
  "nbdotrun",
  "nbdev",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.13",
  "mkdocs-mermaid2-plugin>=1.2.1"
]

[tool.uv.sources]
starrynight = { workspace = true }
pipecraft = { workspace = true }
conductor = { workspace = true }

[tool.uv.workspace]
members = ["starrynight", "pipecraft", "conductor"]
exclude = ["canvas", "docs", "nix", "scratch"]

[tool.hatch.build.targets.wheel]
packages = ["workspace"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.jupytext.formats]
"starrynight/notebooks/ipynb" = "ipynb"
"starrynight/notebooks/pypct" = "py:percent"
