[project]
name = "conductor"
version = "0.1.0"
description = "Pooled cellpainting pipeline conductor"
authors = [{ name = "Ankur Kumar", email = "ank@leoank.me" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]~=0.112",
  "SQLAlchemy~=2.0",
  "alembic~=1.13",
  "pydantic~=2.8",
  "pydantic-settings~=2.4",
  "starrynight @ file:///${PROJECT_ROOT}/../starrynight",
  "joblib~=1.3",
]

[project.optional-dependencies]
dev = ["pytest~=8.2", "ruff~=0.5", "build~=1.2", "twine~=5.1"]

[project.scripts]
conductor = "conductor.cli.main:main"

[build-system]
# setuptools>=61 supports PEPs 517, 518, 621, 660
# https://setuptools.pypa.io/en/latest/history.html#v61-0-0
# setuptools-scm asks for setuptools>=64
# https://setuptools-scm.readthedocs.io/en/latest/
requires = ["setuptools>=64.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
exclude = ["vendor"]

[tool.basedpyright]
typeCheckingMode = "basic"
