[project]
name = "conductor"
version = "0.1.0"
description = "Pooled cellpainting pipeline conductor"
authors = [{ name = "Ankur Kumar", email = "ank@leoank.me" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]~=0.112",
  "websockets~=13.0",
  "schedule~=1.2",
  "SQLAlchemy~=2.0",
  "alembic~=1.13",
  "pydantic~=2.8",
  "pydantic-settings~=2.4",
  "joblib~=1.3",
  "cloudpathlib[all]>=0.18,<1.0",
  "starrynight",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "build", "twine"]

[tools.uv.sources]
starrynight = { path = true }

[project.scripts]
conductor = "conductor.cli.main:main"

[build-system]
# setuptools>=61 supports PEPs 517, 518, 621, 660
# https://setuptools.pypa.io/en/latest/history.html#v61-0-0
# setuptools-scm asks for setuptools>=64
# https://setuptools-scm.readthedocs.io/en/latest/
requires = ["setuptools>=64.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
exclude = ["vendor"]
ignore = ["ANN101"]
per-file-ignores = { "tests/*" = ["D103"] }

[tool.basedpyright]
typeCheckingMode = "basic"
