[project]
name = "pipecraft"
version = "0.19.0"
description = "Library and tools to build and execute pipelines"
authors = [{ name = "Ankur Kumar", email = "ank@leoank.me" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6,<3.0",
  "networkx>=3.2,<4.0",
  "matplotlib>=3.8,<4.0",
  "Mako>=1.3.5,<2.0",
  "cloudpathlib[all]>=0.18,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "build>=1.2", "twine>=5.1"]

[build-system]
# setuptools>=61 supports PEPs 517, 518, 621, 660
# https://setuptools.pypa.io/en/latest/history.html#v61-0-0
# setuptools-scm asks for setuptools>=64
# https://setuptools-scm.readthedocs.io/en/latest/
requires = ["setuptools>=64.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pipecraft" = ["*.mako"]

[tool.ruff]
select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
ignore = ["ANN101"]
exclude = ["vendor"]
per-file-ignores = { "tests/*" = ["D103"] }

[tool.basedpyright]
typeCheckingMode = "basic"
