[project]
name = "starrynight"
version = "0.1.0"
description = "Pooled cellpainting pipelines"
authors = [{ name = "Ankur Kumar", email = "ank@leoank.me" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # "attrdict3~=2.0",
  # "pipecraft~=0.2",
  # "cytoskel~=0.2",
  # "cpgdata~=0.4",
  "click~=8.1",
  # "numpy~=1.24",
  # "cellprofiler-core-nightly~=5.0.0.dev69",
  # "cellprofiler-library-nightly~=5.0.0.dev69",
  "Cellprofiler-nightly~=5.0.0.dev69",
  "joblib~=1.3",
]

[project.scripts]
starrynight = "starrynight.cli.main:main"

[build-system]
# setuptools>=61 supports PEPs 517, 518, 621, 660
# https://setuptools.pypa.io/en/latest/history.html#v61-0-0
# setuptools-scm asks for setuptools>=64
# https://setuptools-scm.readthedocs.io/en/latest/
requires = ["setuptools>=64.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
exclude = ["vendor"]

[tool.basedpyright]
typeCheckingMode = "basic"
