[project]
name = "starrynight"
version = "0.1.3"
description = "Pooled cellpainting pipelines"
authors = [{ name = "Ankur Kumar", email = "ank@leoank.me" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecraft>=0.16",
  "lark[interegular]>=1.2",
  "cpgdata~=0.5",
  "click~=8.1",
  "numpy<=1.26.4",
  "cloudpathlib[all]>=0.18,<1.0",
  "joblib<=1.4",
  "linkml>=1.8",
  "pyimagej>=1.6",
  "marimo[sql]>=0.11",
  "numpydoc"
]

[project.optional-dependencies]
# cellprofiler = [
#   "cellprofiler-core",
#   "cellprofiler-library",
#   "Cellprofiler",
# ]
dev = ["pytest", "ruff==0.9.10", "build", "twine", "jupytext", "ipython", "pooch>=1.8.2"]

[tools.uv.sources]
pipecraft = { workspace = true }

[project.scripts]
starrynight = "starrynight.cli.main:main"

[build-system]
# setuptools>=61 supports PEPs 517, 518, 621, 660
# https://setuptools.pypa.io/en/latest/history.html#v61-0-0
# setuptools-scm asks for setuptools>=64
# https://setuptools-scm.readthedocs.io/en/latest/
requires = ["setuptools>=64.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
exclude = ["vendor", "src/starrynight/modules/schema.py"]
ignore = ["D203", "D213", "D103", "D102", "E501", "ANN101", "ANN001", "ANN201", "F401", "D100", "D101", "D419"]  # Avoid conflicting rules; Others: skipping for now

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.marimo.runtime]
watcher_on_save = "autorun"

[tool.jupytext.formats]
"notebooks/ipynb" = "ipynb"
"notebooks/pypct" = "py:percent"
